fixed appointments table spacing moved logo to footer

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -8909,6 +8909,14 @@ details.collapse summary::-webkit-details-marker {
   height: 1.75rem;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .max-h-full {
   max-height: 100%;
 }
@@ -8982,6 +8990,14 @@ details.collapse summary::-webkit-details-marker {
 
 .w-7 {
   width: 1.75rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .min-w-full {
